[workspace]
resolver = "2"
members = ["host", "methods", "stacks"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true


[workspace.dependencies]
k256 = { version = "=0.13.4", default-features = false, features = [
  "arithmetic",
  "ecdsa",
  "expose-field",
  "serde",
  "std",
] }
hex = { version = "0.4.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[workspace.patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
