[package]
name = "vault_prover"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
k256 = { version = "=0.13.4", default-features = false, features = [
  "arithmetic",
  "ecdsa",
  "expose-field",
  "serde",
  "std",
] }
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
stacks = { path = "../stacks" }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }