[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
stacks = { path = "../stacks" }

hex = { workspace = true }
k256 = { workspace = true }
risc0-zkvm = { version = "^3.0.3" }
serde = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
