[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
stacks = { path = "../stacks" }

hex = { workspace = true }
k256 = { workspace = true }
risc0-zkvm = { version = "^3.0.3" }
serde = "1.0"
serde_json = "1.0"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "time", "ansi"] }