[package]
name = "stacks"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
hex = { version = "0.4.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
