[package]
name = "stacks"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
hex = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }

# [patch.crates-io]
# # Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# # multiplication accelerator support for all downstream usages of the following crates.
# sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
